# amplify-schemas

./: README.md  pyproject.toml
src/schemas/: mediastore.py  provenance.py
tests/: test_provenance.py
